[package]
name = "examples"
publish = false
edition = "2024"
license = "MIT"

[dev-dependencies]
grapes = { path = "../grapes" }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }

[[example]]
name = "calc"
path = "calc.rs"

[[example]]
name = "counter"
path = "counter.rs"

[[example]]
name = "double"
path = "double.rs"

[[example]]
name = "weather"
path = "weather.rs"
